syntax = "proto3";

package com.bennet.grpc.v1;

import "buf/validate/validate.proto";
option java_multiple_files = true;
option java_package = "com.bennet.grpc.v1";

service HelloService {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string name = 1 [(buf.validate.field).string = {min_len: 1, max_len: 50}];
}

message SayHelloResponse {
  string message = 1;
}
